--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/myIcon.ico" />
+    <link rel="icon" type="image/x-icon" href="/white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VA | QR Code Generator</title>
   </head>
